# hurricane

./: .gitignore  CMakeLists.txt
glad/: CMakeLists.txt
glad/src/glad/: glad.c  glad.h
hurricane/: CMakeLists.txt
hurricane/src/hurricane/: exercises.c  hurricane.c  hurricane.h  hurricane_internal.h  hurricane_io.c  hurricane_render.c  hurricane_shader.c  hurricane_window.c
program/: CMakeLists.txt  main.c
shaders/: fragment_shader.glsl  learn_opengl_triangle2_fragment_shader.glsl  learn_opengl_triangle2_vertex_shader.glsl  vertex_shader.glsl
